<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Delivr</string>
    <string name="apikey">B668EDFE-4BDA-4684-A075-B04D89E45EAE</string>
    <string name="apicode">r6!e1Yi4uM</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_forgotpwd">Forgot Password</string>
    <string name="font_bold" translatable="false">fonts/OpenSans_Bold.ttf</string>
    <string name="font_regular" translatable="false" tools:keep="@string/font_regular">fonts/OpenSans_Regular.ttf</string>
    <string name="font_light" translatable="false">fonts/OpenSans_Light.ttf</string>
    <string name="font_semibold" translatable="false" tools:keep="@string/font_semibold">fonts/OpenSans_SemiBold.ttf</string>
    <string name="font_extrabold" translatable="false" tools:keep="@string/font_extrabold">fonts/OpenSans_ExtraBold.ttf</string>
    <string name="font_bolditalic" translatable="false" tools:keep="@string/font_bolditalic">fonts/OpenSans_BoldItalic.ttf</string>

    <string name="txt_myjobs">My Jobs</string>
    <string name="txt_jobqueue">Jobs Queue</string>
    <string name="txt_comp_jobs">Completed Jobs</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_johndoe">John Doe</string>
    <string name="jobs_txt">Jobs</string>
    <string name="queue_txt">Queue</string>
    <string name="txt_myjobs_queue">Jobs Queue</string>
    <string name="txt_myprofile">My Profile</string>
    <string name="error">Error</string>
    <string name="network">Please check your internet connection.</string>
    <string name="alert">Alert</string>
    <string name="enterusername">Please enter your UserName</string>
    <string name="entervalidemailid">Please enter valid Email ID</string>
    <string name="enterpassword">Please enter your Password</string>
    <string name="pwdvalidation">Please enter valid Password</string>
    <string name="pwdvalidation_cfrm">Confirm Password must contain AlphaNumeric Characters</string>
    <string name="pwdlength">Password must have atleast 8 Characters</string>
    <string name="entercnfrmpassword">Please enter your Confirm Password</string>
    <string name="dialog_error">An error has occurred. Please try again.</string>
    <string name="dialog_title_sorry">Sorry</string>
    <string name="btn_ok">@android:string/ok</string>
    <string name="btn_cancel">@android:string/cancel</string>
    <string name="gps_network_not_enabled">GPS Network not enabled</string>
    <string name="open_location_settings">Open Location</string>
    <string name="cancel">Cancel</string>
    <string name="login_text">Login</string>
    <string name="loc_required_text">Location required to access Delivr</string>
    <string name="need_to_allow">You need to allow permissions</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_role">Role</string>
    <string name="prompt_emailid">Email Id</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_mobileno">Mobile No</string>
    <string name="prompt_phoneno">Phone No</string>
    <string name="prompt_doj">Date of Join</string>
    <string name="prompt_fax">Fax</string>
    <string name="prompt_companyname">Company Name</string>
    <string name="prompt_nricfin_acra">NRICFIN_ACRA</string>
    <string name="prompt_ridertype">RiderType</string>
    <string name="prompt_commission">Commission</string>
    <string name="prompt_commissiondate">CommissionDate</string>
    <string name="prompt_zipcode">Zipcode</string>
    <string name="prompt_message">Message</string>
    <string name="view_details">View</string>
    <string name="wb_no">WB No:</string>
    <string name="pickupdatetime">Pickup Date:</string>
    <string name="transferdate">Date:</string>
    <string name="pickuptime">Pickup Time:</string>
    <string name="job_type">Job Type:</string>
    <string name="wallet_amount">Amount:</string>
    <string name="wallet_totalbalance">Total Balance:</string>
    <string name="consignment_type">Job Type:</string>
    <string name="delivery_addr">Delivery Address:</string>
    <string name="sender_info">Sender Info</string>
    <string name="consignment_info">Consignment Info</string>
    <string name="consignment_type_label">Consigment Type:</string>
    <string name="service_type_label">Service Type:</string>
    <string name="del_type_label">Delivery Type:</string>
    <string name="pickupdatetime_label">PickupDateTime:</string>
    <string name="sepcial_inst">Special Instruction</string>
    <string name="job_status">Status:</string>
    <string name="pickup_addr">Pickup Address:</string>
    <string name="job_details">Job Details</string>
    <string name="order_his_details_txt">Order Details</string>
    <string name="wallet_checkout">CheckOut</string>
    <string name="txt_currency">SGD $</string>
    <string name="txt_save">Save</string>
    <string name="txt_pass">Pass</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_jobstatus">Job Status:</string>
    <string name="device_dont_have_camera">Sorry! Your device doesn\'t support camera</string>
    <string name="some_issues_text">Some issues occured, please wait few minutes</string>
    <string name="nojbosfound">No Jobs Found</string>
    <string name="default_notification_channel_id">sg_delivr_channel</string>
    <string name="channel_name_promonotify">delivr_notify</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="txt_help_support">Help &amp; Support</string>
    <string name="txt_logout_msg">Are you sure want to Logout?</string>
    <string name="txt_myorders">My orders</string>
    <string name="txt_order_history">Order History</string>
    <string name="txt_wallet_history">Wallet History</string>
    <string name="txt_merchant">Merchant</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_pay">Pay</string>
    <string name="btn_proceed">Proceed</string>
    <string name="hint_your_message">Your Message</string>
    <string name="txt_wallet_topup">Wallet top-up</string>
    <string name="hint_title_pickupaddr">Pickup Address</string>
    <string name="hint_title_dlvryaddr">Delivery Address</string>
    <string name="hint_title_pickupdetails">Pickup Details</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_pickup_postaladdr">Pickup Postal Code</string>
    <string name="hint_dlvry_postaladdr">Delivery Postal Code</string>
    <string name="hint_unitno">Unit No</string>
    <string name="hint_pickupdatetime">Pickup Date Time</string>
    <string name="hint_fooddetails">Food Details</string>
    <string name="hint_deliveryinstruction">Delivery Instruction</string>
    <string name="search_location">Search Location</string>
    <string name="search_hint">Search Location</string>
    <string name="img">Image</string>
    <string name="txt_pickup">PickUp Location</string>
    <string name="txt_delivery">Delivery Location</string>
    <string name="enterdlvryaddr">Please enter your Delivery Address</string>
    <string name="entertopupamount">Please enter the Amount</string>
    <string name="enterdlvryaddrname">Please enter your Delivery Name</string>
    <string name="enterdatetime">Please enter your Pickup Date Time</string>
</resources>
