<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:src="@drawable/upostloginbg"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    fontPath="@string/font_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/edt_loginemail"
                    fontPath="@string/font_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@android:color/transparent"
                    android:hint=""
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp"
                    tools:ignore="MissingPrefix" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"></View>

                <TextView
                    fontPath="@string/font_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/prompt_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_loginpwd"
                        fontPath="@string/font_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:hint=""
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <ImageView
                        android:id="@+id/buttonTogglePasswordVisibility"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:scaleType="center"
                        android:src="@drawable/ic_password_off" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"></View>


                <TextView
                    android:id="@+id/loginsubmit"
                    fontPath="@string/font_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/box_unfilled_white_low"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/action_sign_in_short"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="MissingPrefix" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgot_pwd"
                        fontPath="@string/font_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/label_forgotpwd"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</RelativeLayout>