<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sch_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_back"
                android:contentDescription="@string/img"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/jbd_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginEnd="24dp"
                android:layout_toEndOf="@+id/sch_back"
                android:fontFamily="@font/robotbold"
                android:gravity="center"
                android:text="@string/search_location"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/img"
                android:background="@drawable/new_search" />

            <AutoCompleteTextView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@null"
                android:fontFamily="@font/robotbold"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|text"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textSize="15sp"
                app:theme="@style/AppSearchView" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>