<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/botttom_view"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotbold"
                android:hint="@string/hint_name"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textCapSentences|text"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotbold"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/robotbold"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="+65"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintStyle">

                <EditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotbold"
                    android:hint="@string/hint_mobile"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="number"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/input_message"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="start"
            android:background="@drawable/empty_border"
            android:fontFamily="@font/robotbold"
            android:gravity="start"
            android:hint="@string/hint_your_message"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="10"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botttom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line_gray" />

        <LinearLayout
            android:id="@+id/submit_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/box_layout"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotbold"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/btn_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

</LinearLayout>